Dec 15, 2004

  * FIXED: Bug#212: Disallow &#0; character entities.

Nov 25, 2004

  * FIXED: utf-8 tests, avoid conflict with UTF-8 support in Prolog

Sep 13, 2004

  * ENHANCED: load_html_file/2: add shorttag(false) to the load_structure/3
    options for better parsing of common errornous HTML pages.

Aug 26, 2004

  * FIXED: Bug#177: catalog files from $SGML_CATALOG_FILES were not
    honoured.  Simon Ambler.  Also made catalog management thread-safe.

Jul 22, 2004

  * MODIFIED: Updated XML-Schema (XSD) namespace in xsdp_types.pl

Apr 28, 2004

  * ADDED: iso_639.pl: ISO-639 language identifiers.

Apr 27, 2004

  * ADDED: first version of xsdp_types.pl, a module to do type checking
    and type conversion for XSD (XML Schema DataTypes).

Apr 26, 2004

  * FIXED: Bug#149: Buffer overflow reading too long NAME, NMTOKEN, etc.
    Fabien Todescato.

Jan 17, 2004

  * FIXED: handling <?xml ...?> switching from SGML to XML mode.
    Fabien Todescato.

Jan 9, 2004

  * FIXED: avoid sharing DTD objects between threads.  Fabien Todescato.

Nov 20, 2003

  * ADDED: xml_name/1 to test an atom to refer to a valid XML name.

Nov 3, 2003

  * FIXED: Error parsing SHORTREF declaration that has whitespace at the
    end.  Richard O'Keefe.

Sep 12, 2003

  * FIXED: Memory leak in load_structure/3 (not freeing the parser data).
    Petter Egesund.

Jul 8, 2003

  * ADDED: handle UTF-8 sequences producing characters that cannot be
    represented as character entities.  Suggested by C. M. Sperberg-McQueen.

  * FIXED: handling &#X, where 128<=X<256 with UTF-8 decoding enabled.
    C. M. Sperberg-McQueen.

Jun 9, 2003

  * FIXED: SGML SHORTREF declaration performed case-insensitive entity
    lookup.  Richard O'Keefe.

Jun 4, 2003

  * ENHANCED: type the conflicting CDATA in #PCDATA that violates the DTD

May 23, 2003

  * FIXED: More catalog trouble.  Richard O'Keefe.

May 22, 2003

  * FIXED: Lookup of system identifiers through the catalogue (avoid early